--- a/config/config.ini
+++ b/config/config.ini
@@ -4,9 +4,9 @@
 ;链接：http://www.pss-system.gov.cn/sipopublicsearch/portal/uiregister-showRegisterPage.shtml
 
 ;用户名
-username=romaforever99
+username='romaforever99'
 ;密码
-password=derossi16
+password='derossi16'
 [proxy]
 ;程序的代理决定使用https://github.com/jhao104/proxy_pool的代理池作为代理方式，若使用者有更好的方式请自行修改proxy_url
 
